tests/ui/lexer/string_escapes_crlf.stderr
error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:6:24
   |
LL | bytes constant s = hex"\
   |                        ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:6:25
   |
LL | bytes constant s = hex"\
   |                         
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:1:1
   |
LL |   bytes constant s = hex"\
LL | | ";
   | |_^
   |

error: cannot skip multiple lines with `\`
  --> $DIR/string_escapes_crlf.sol:15:1
   |
LL | / 
LL | | ";
   | |_^
   |

error: cannot skip multiple lines with `\`
  --> $DIR/string_escapes_crlf.sol:18:1
   |
LL | / 
LL | | ";
   | |_^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:20:24
   |
LL | bytes constant s = hex"\
   |                        ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:20:25
   |
LL | bytes constant s = hex"\
   |                         
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:1:1
   |
LL |   bytes constant s = hex"\
LL | | 
   | |_^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:21:1
   |
LL | 
   | 
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:1:1
   |
LL |   
LL | | ";
   | |_^
   |

error: unescaped newline
  --> $DIR/string_escapes_crlf.sol:1:1
   |
LL |   string constant s = "
LL | | ";
   | |_^
   |

error: unescaped newline
  --> $DIR/string_escapes_crlf.sol:1:1
   |
LL |   string constant s = unicode"
LL | | ";
   | |_^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:35:24
   |
LL | bytes constant s = hex"
   |                        
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:1:1
   |
LL |   bytes constant s = hex"
LL | | ";
   | |_^
   |

error: aborting due to 14 previous errors

